"pom file modification"

--- a/spring-boot-app/pom.xml
+++ b/spring-boot-app/pom.xml
@@ -53,8 +53,19 @@
 
 	<build>
 		<plugins>
-			<plugin>
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<!--configuration> <release>11</release> </configuration -->
+				<dependencies>
+					<dependency>
+						<!-- update compiler plugin dependency on ASM for Java 11 compatibility -->
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>6.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
